# python-stack-schematic-generator

./: .pre-commit-config.yaml  AI_CONTEXT.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README-jp.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-charter.yml  ci.yml  dev-charter-check.yml
docs/dev-charter/.github/workflows/: ci.yml  update-version.yml
stack_schematic_generator/: __init__.py  coordinate.py  layer.py  stack.py  stack_schematic.mplstyle
tests/: test_stack.py
