[project]
name = "stack-schematic-generator"
version = "0.1.0"
description = "Python library for generating schematic diagrams of multilayer stack structures"
authors = [
    {name = "Yukihiro Marui", email = "12211343+y-marui@users.noreply.github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8,<4.0.0",
    "matplotlib-extension @ git+https://github.com/y-marui/python-matplotlib-extension.git",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
exclude = ["stack_schematic_generator/test_stack.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["stack_schematic_generator/test_stack\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
